# badge_cnn-visualization

./: CMakeLists.txt  README.md  imgui.ini
.devcontainer/: Dockerfile  devcontainer.json
assets/model/: hotspots.json
bridge/: export_model.py
bridge/output/: model.json
python/: infer.py  train.py
python/ckpts/: badge9_best.pth
python/data/: build_clean_dataset.py  build_dataset.py
python/model/: badge_cnn.py
src/: main.cpp
src/loader/: modelloader.cpp  modelloader.hpp
src/renderer/: BackgroundRenderer.cpp  BackgroundRenderer.hpp  HotspotRenderer.cpp  HotspotRenderer.hpp  LayerDetailRenderer.cpp  LayerDetailRenderer.hpp
src/renderer/convanim/: ConvAnimBase.hpp  ConvAnimPanel.cpp  ConvAnimPanel.hpp
src/renderer/convanim/animations/: Conv1Anim.cpp  Conv1Anim.hpp  Conv2Anim.cpp  Conv2Anim.hpp  Conv3Anim.cpp  Conv3Anim.hpp  Conv4Anim.cpp  Conv4Anim.hpp  MultiChannelConvAnim.cpp  MultiChannelConvAnim.hpp
src/renderer/detail/: Conv1Detail.cpp  Conv1Detail.hpp  Conv2Detail.cpp  Conv2Detail.hpp  Conv3Detail.cpp  Conv3Detail.hpp  Conv4Detail.cpp  Conv4Detail.hpp  ConvDetailBase.hpp
